# sovereign-shield

./: # OpenClaw.txt  .gitignore  LICENSE  MANIFEST.in  README.md  RELEASE_PLAN.md  ROADMAP.md  pyproject.toml  setup.py  ss_daemon.py  test_lora_export.py  test_new_modules.py  test_shield.py  test_truth_guard.py
sovereign_shield/: __init__.py  action_parser.py  adaptive.py  conscience.py  core.py  core_safety.py  daemon.py  firewall.py  frozen_memory.c  frozen_memory_fallback.py  hardware_protection.py  hitl.py  import_rules.py  input_filter.py  lora_export.py  multimodal_filter.py  prompts.py  siem_logger.py  trained_rules.json  truth_guard.py  veto.py
sovereign_shield/providers/: __init__.py  base.py  gemini.py  ollama.py  openai_provider.py
tests/: test_sovereign_shield.py
